--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SeaBattle</string>
+    <string name="input_name">Name: </string>
+    <string name="input_username">Username: </string>
+    <string name="buttonAdd_value">Add</string>
 </resources>
