--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="input_name">Name: </string>
     <string name="input_username">Username: </string>
     <string name="buttonAdd_value">Add</string>
+    <string name="buttonEdit">Edit</string>
+    <string name="buttonDelete">Delete</string>
+    <string name="buttonReset">Reset</string>
 </resources>
