--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="buttonEdit">Edit</string>
     <string name="buttonDelete">Delete</string>
     <string name="buttonReset">Reset</string>
+    <string name="buttonCancel">Cancel</string>
 </resources>
