--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,19 @@
     <string name="buttonProfile">Profile</string>
     <string name="buttonSettings">Settings</string>
     <string name="pseudo">Username :</string>
-    <string name="nbWin">Number of Win :</string>
+    <string name="nbWin">Won games :</string>
+    <string name="diff">Difficulty :</string>
     <string name="ratio">Ratio :</string>
     <string name="music">Music : </string>
     <string name="sound">Sound Effects : </string>
     <string name="animation">Animation</string>
+
+    <string name="enemyShipLeft">Enemy\'s ships sunk :</string>
+    <string name="myShipLeft">Your ships sunk :</string>
+    <string name="rotateShip">Rotate ships</string>
+    <string name="placementTitle">Place your ship</string>
+    <string name="randomPlacement">Random placement</string>
+    <string name="play">Play</string>
+    <string name="enemyBattleField">ENEMY BATTLEFIELD</string>
+    <string name="myFleet">MY FLEET</string>
 </resources>
